# design-patterns

./: LICENSE  README.md  copilot.py  pyproject.toml  singleton.ipynb
